remove illegal-access flag
fixes #49